--- a/.gitignore
+++ b/.gitignore
@@ -18,10 +18,10 @@
 # vendor/
 
 # Go workspace file
-go.work
+go/solv_watr_sort/go.work
 board.go_bak
 .DS_Store
-solv_watr_sort
+go/solv_watr_sort/solv_watr_sort
 test_run_*.txt
 *.gz
 .vscode/launch.json
